# H-Life

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ini
backend/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_body_tables.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  logging.py  rate_limit.py  security.py
backend/app/data/: exercises.json  nutrition_db.json
backend/app/data/vision_samples/: README.md
backend/app/models/: __init__.py  base.py  body.py  user.py
backend/app/routers/: __init__.py  bioimpedance.py  body_progress.py  hydration.py  labs.py  notifications.py  nutrition.py  reports.py  training.py
backend/app/schemas/: bioimpedance.py  body_progress.py  hydration.py  labs.py  notifications.py  nutrition.py  reports.py  training.py
backend/app/services/: ai_pose.py  bioimpedance.py  body_compare.py  hydration.py  labs.py  notifications.py  nutrition.py  reports.py  storage.py  training.py
backend/tests/: conftest.py  test_bioimpedance.py  test_body_progress.py  test_hydration.py  test_labs_reports.py  test_nutrition.py  test_reports_notifications.py  test_training.py
docs/: README.md  ai.md  backend.md  devops.md  flows.md  frontend.md  gap_analysis.md  launch.md  mobile.md  security.md  share-68f578d6.md
frontend/: .env.local.example  package.json  tailwind.config.ts  tsconfig.json
mobile/: .gitignore  env.dev.example  env.prod.example  env.staging.example  pubspec.yaml
(+30 files in other folders)
