[tool.poetry]
name = "h-life-backend"
version = "0.1.0"
description = "H-Life modular API"
authors = ["H-Life Team <dev@h-life.test>"]
readme = "README.md"
packages = [{ include = "app", from = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.0.3"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg = {version = "^3.1.12", extras = ["binary"]}
aioboto3 = "^12.0.0"
boto3 = "^1.28.0"
python-multipart = "^0.0.6"
redis = "^5.0.1"
rq = "^1.15.1"
celery = "^5.3.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
structlog = "^23.1.0"
prometheus-client = "^0.18.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
